--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Jam's Delivery</title>
   </head>
   <body>
     <div id="root"></div>
